Frontend Parte 31: Conexión BD con categorías
