# backend/src/app.js
@@ -24,6 +24,7 @@ app.use('/api/mensajes', require('./routes/MensajeRoutes'));
 app.use('/api/grupos', require('./routes/GrupoRoutes'));
 app.use('/api/usuarios', require('./routes/UsuarioRoutes'));
 app.use('/api/comentarios', require('./routes/ComentarioRoutes'));
+app.use('/api/categorias', require('./routes/CategoriaRoutes'));
 
 const PORT = process.env.PORT || 5000;
 app.listen(PORT, () => {
